# synbak

./: .drone.yml  .gitignore  AUTHORS  BUGS  CHANGELOG.md  ChangeLog  FAQ  INSTALL  Makefile.am  NEWS  README  README.fedora  README.md  THANKS  TODO  autoclean.sh  autogen.sh  configure.ac  synbak.spec.in  template.conf
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  it.po  pl.po  synbak.pot
src/: .gitignore  Makefile.am  functions.sh  synbak  synbak.sh.in  template.conf
src/method/: Makefile.am
src/method/dar/: Makefile.am  dar.sh
src/method/laserdisc/: Makefile.am  laserdisc.sh  nonerrors.strings
src/method/ldap/: Makefile.am  ldap.sh  nonerrors.strings
src/method/mysql/: Makefile.am  mysql.sh  nonerrors.strings
src/method/oracle/: Makefile.am  nonerrors.strings  oracle.sh
src/method/pgsql/: Makefile.am  pgsql.sh
src/method/rsync/: Makefile.am  nonerrors.strings  rsync.sh
src/method/scp/: Makefile.am  nonerrors.strings  scp.sh
src/method/tape/: Makefile.am  tape.sh
src/method/tar/: Makefile.am  nonerrors.strings  tar.sh
src/method/vmware/: Makefile.am  vmware.sh
src/method/wget/: Makefile.am  nonerrors.strings  wget.sh
src/report/: Makefile.am
src/report/email/: Makefile.am  email.sh
src/report/html/: Makefile.am  html.sh  synbak.css
src/report/html/calendar/: Makefile.am  activecalendar-license.html  activecalendar-readme.txt  activecalendar.php  calendar.css  index.php
src/report/html/images/: Makefile.am
src/report/html/js/: Makefile.am  customsort.js  tablesort.js
