imagesdir = $(pkgdatadir)/report/html/images

images_DATA = \
	synbak-logo.png		\
	synbak-logo-small.png		\
	initzero-logo.jpg	\
	initzero-logo.png	\
	detail.png		\
	calendar.png		\
	go-next.png		\
	go-previous.png		\
	sortable.png		\
	sort-down.png		\
	sort-up.png		\
	$(NULL)

EXTRA_DIST = $(images_DATA)

